# ESP32-S3-PhotoPainter

01 Example/: README.md
01_Example/xiaozhi-esp32/.github/: copilot-instructions.md
01_Example/xiaozhi-esp32/components/pmicpower/: power_bsp.cpp  power_bsp.h
01_Example/xiaozhi-esp32/components/port_bsp/: CMakeLists.txt  codec_bsp.cpp  codec_bsp.h  compressed_audio_example.h  display_bsp.cpp  display_bsp.h
01_Example/xiaozhi-esp32/components/user_app_bsp/: CMakeLists.txt  user_app.h
01_Example/xiaozhi-esp32/components/user_app_bsp/mode_src/: Mode_Selection.cpp  Photo_Daily_mode.cpp
01_Example/xiaozhi-esp32/docs/: audio_compression_report.md
01_Example/xiaozhi-esp32/main/: main.cc
01_Example/xiaozhi-esp32/scripts/: compress_pcm.py  pcm_to_ogg.py
