idf_component_register(
    SRCS 
    "i2c_bsp.cpp" 
    "display_bsp.cpp" 
    "sdcard_bsp.cpp" 
    "./src/multi_button/multi_button.c" 
    "button_bsp.c" 
    "led_bsp.c"
    "./codec_bsp.cpp"
    "./i2c_equipment.cpp"
    "./src/fonts/font14CN.c"
    "./src/fonts/font18CN.c" 
    "./src/fonts/font22CN.c"
    "traverse_nvs.cpp"
    PRIV_REQUIRES 
    nvs_flash
    esp_timer
    codec_board 
    REQUIRES
    esp_driver_sdmmc
    fatfs
    app_bsp
    REQUIRES
    driver
    INCLUDE_DIRS 
    "./" 
    "./src/multi_button"
    "./src/fonts")
set_source_files_properties(
    sdcard_bsp.cpp
    PROPERTIES
    COMPILE_OPTIONS "-Wno-format-truncation"
)

